@@ -17,3 +17,4 @@
     %li= link_to_unless_current :comments.l, admin_comments_path 
     %li= link_to_unless_current :tags.l, admin_tags_path
     %li= link_to_unless_current :admin_pages.l, admin_pages_path
+    %li= link_to :cache_clear_link.l, admin_clear_cache_path, :confirm => :are_you_sure.l
